# ads-ascl-combined

./: .env.example  pyproject.toml
akd_ext/: files.py  utils.py
akd_ext/agents/: __init__.py  astro_search_care.py  gap.py  image_analyzer.py
akd_ext/agents/closed_loop/: __init__.py
akd_ext/agents/closed_loop/cm1/: __init__.py  agents.py  prompts.py  tools.py
akd_ext/agents/closed_loop/prithvi/: __init__.py  agents.py  orchestrator.py  prompts.py  tools.py
akd_ext/agents/closed_loop/prithvi/context/: ancillary_dataset_inventory.md  feasibility_mapper_governance.md  feasibility_mapper_reference.md  gap_detection_process.md  pipeline_capabilities.md  workflow_spec_builder_governance.md  workflow_spec_builder_reference.md  workflow_spec_config_schema.md
akd_ext/agents/closed_loop/stages/: __init__.py  experiment_analysis.py  experiment_implementation.py  interpretation_paper_assembly.py  research_report_generator.py  workflow_spec_builder.py
akd_ext/agents/code_generator/: __init__.py  _prompt.py  code_gen.py  designer.py  generator.py  schemas.py  validator.py
akd_ext/mcp/: server.py
akd_ext/tools/: __init__.py  _http.py  _nominatim.py  ads.py  ascl.py  dummy.py  geocode.py  reverse_geocode.py
notebooks/: Closed Loop Agent CM1 Workflow.ipynb  Image Analyzer Agent.ipynb  closed_loop_cm1_workflow.py  closed_loop_prithvi_workflow.py  cm1_stage5_analysis.md  cm1_stage5_analysis_STABILITY_backup.md  cm1_stage6_paper.md
tests/agents/closed_loop/: test_closed_loop_templates.py
tests/agents/closed_loop/prithvi/: test_prithvi_stages.py
tests/tools/: test_ads.py  test_ads_no_token.py  test_ascl.py
