[project]
name = "akd-ext"
version = "0.0.1"
description = "Misc extension to akd-core"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Nish", email = "np0069@uah.edu"},
    {name = "Sanjog", email = "st0128@uah.edu"},
]
keywords = ["akd", "extension", "tools", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "akd @ git+https://github.com/NASA-IMPACT/akd-core.git@develop",
    "fastmcp>=2.0.0",
    "openai-agents>=0.6.7",
    "PyGithub>=2.1.1",
]

[project.urls]
Homepage = "https://github.com/NASA-IMPACT/akd-ext"
Repository = "https://github.com/NASA-IMPACT/akd-ext"
"AKD Core" = "https://github.com/NASA-IMPACT/accelerated-discovery"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.2.0",
    "PyGithub>=2.1.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["akd_ext*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"akd_ext" = ["**/*.md", "**/*.yml", "**/*.yaml", "**/*.json", "py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "-n",
    "auto",
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=akd_ext",
    "--cov-report=term-missing",
    "--dist=loadfile",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.uv]
override-dependencies = ["wrapt>=1.14"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F841"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]
